# prometheus-remote-writer

./: Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
prometheus_remote_writer/: __init__.py  types_pb2.py
prometheus_remote_writer/proto/: remote_pb2.py  types_pb2.py
prometheus_remote_writer/proto/gogoproto/: gogo_pb2.py
proto/: generate-proto.py
tests/: test_mock_remote_writer.py  test_remote_writer.py  test_remote_writer_integration.py  test_remote_writer_mocks.py
