[tool.poetry]
name = "prometheus-remote-writer"
version = "0.0.2"
description = "A Python package to send data using Prometheus remote write protocol."
authors = ["xy.kong <xy.kong@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1 <4"
grpcio-tools = "^1.70.0"
requests = "^2.32.3"
python-snappy = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
tox = "^4.24.1"
flake8 = "^7.1.1"


[tool.poetry.requires-plugins]
poetry-versions-plugin = ">=0.9.0"


[tool.versions]
branch = "release/0.0.3"
commit = "75c150f"
commit_count = 30
is_dirty = false
datetime = "2025-02-10 11:43:20"
version = "0.0.2"


[tool.versions.settings]
allow_dirty = false
commit = true
commit_on = ["major", "minor", "patch"]
commit_message = "Bump version: {current_version} → {new_version}"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
