[tool.poetry]
name = "prometheus-remote-writer"
version = "0.0.11"
description = "A Python package to send data using Prometheus remote write protocol."
authors = ["xy.kong <xy.kong@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1 <4"
grpcio-tools = "^1.70.0"
requests = "^2.32.3"
python-snappy = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
tox = "^4.24.1"
flake8 = "^7.1.1"


[tool.poetry.requires-plugins]
poetry-versions-plugin = ">=0.10.1"


[tool.versions]
branch = "release/0.0.11"
commit = "08c34c3"
commit_count = 78
is_dirty = false
datetime = "2025-02-11 14:57:36"
version = "0.0.11"


[tool.versions.settings]
allow_dirty = false
commit = true
commit_on_argument = ["major", "minor", "patch"]
commit_on_branches = ["release/.*"]
commit_message = "Bump version: {current_version} → {new_version}"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
